#调用库

cmake_minimum_required (VERSION 2.8)
PROJECT(0VOICE)

SET(SRC_LIST main.c)
MESSAGE(STATUS "THIS IS BINARY DIR " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "THIS IS SOURCE DIR " ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/lib")

# /usr下的库可以自动找到，其余要用LINK_DIRECTORIES找到对应的库所在的路径
LINK_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/lib")

ADD_EXECUTABLE(darren  ${SRC_LIST})
TARGET_LINK_LIBRARIES(darren Dir1)